k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cscm
  labels:
    name: cscm
    environment: production
