k8s/prometheus-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-adapter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: prometheus-adapter
  template:
    metadata:
      labels:
        name: prometheus-adapter
    spec:
      serviceAccountName: prometheus-adapter
      containers:
        - name: prometheus-adapter
          image: directxman12/k8s-prometheus-adapter-amd64:v0.10.0
          imagePullPolicy: IfNotPresent
          args:
            - --cert-dir=/var/run/serving-cert
            - --secure-port=6443
            - --v=4
            - --prometheus-url=http://prometheus-service.monitoring.svc.cluster.local:9090/
            - --config=/etc/adapter/config.yaml
          ports:
            - containerPort: 6443
          volumeMounts:
            - name: config-volume
              mountPath: /etc/adapter/
            - name: tmpfs
              mountPath: /tmp
            - name: serving-cert
              mountPath: /var/run/serving-cert
          livenessProbe:
            httpGet:
              path: /healthz
              port: 6443
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 6443
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-adapter-config
        - name: tmpfs
          emptyDir: {}
        - name: serving-cert
          secret:
            defaultMode: 420
            secretName: prometheus-adapter-serving-certs
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-adapter
  namespace: default
spec:
  ports:
    - port: 443
      targetPort: 6443
  selector:
    name: prometheus-adapter
